--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -4,6 +4,12 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-eval' 'nonce-{{ csp_nonce }}'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; 
+      font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; 
+      img-src 'self' https://demo.bootstrapdash.com/skydash/themes/assets/images/dashboard/people.svg https://demo.bootstrapdash.com/skydash/themes/assets/images/logo-mini.svg https://demo.bootstrapdash.com/skydash/themes/assets/images/logo.svg data:;"
+    />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Skydash Admin</title>
   <!-- plugins:css -->
@@ -21,8 +27,8 @@
   <!-- inject:css -->
   <link rel="stylesheet" href="{% static 'assets/css/vertical-layout-light/style.css' %}">
 
-      <link rel="stylesheet" href="{% static 'assets/css/css-font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/css-materialdesignicons.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/css-font-awesome.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/css-materialdesignicons.min.css' %}">
   <link rel="stylesheet" href="{% static 'assets/css/css-themify-icons.css' %}">
   <link rel="stylesheet" href="{% static 'assets/css/css-vendor.bundle.base.css' %}">
   <link rel="stylesheet" href="{% static 'assets/css/feather-feather.css' %}">
@@ -162,28 +168,7 @@
     <!-- partial -->
     <div class="container-fluid page-body-wrapper">
       <!-- partial:partials/_settings-panel.html -->
-      <div class="theme-setting-wrapper">
-  <div id="settings-trigger"><i class="ti-settings"></i></div>
-  <div id="theme-settings" class="settings-panel">
-    <i class="settings-close ti-close"></i>
-    <p class="settings-heading">SIDEBAR SKINS</p>
-    <div class="sidebar-bg-options selected" id="sidebar-light-theme">
-      <div class="img-ss rounded-circle bg-light border me-3"></div>Light
-    </div>
-    <div class="sidebar-bg-options" id="sidebar-dark-theme">
-      <div class="img-ss rounded-circle bg-dark border me-3"></div>Dark
-    </div>
-    <p class="settings-heading mt-2">HEADER SKINS</p>
-    <div class="color-tiles mx-0 px-4">
-      <div class="tiles success"></div>
-      <div class="tiles warning"></div>
-      <div class="tiles danger"></div>
-      <div class="tiles info"></div>
-      <div class="tiles dark"></div>
-      <div class="tiles default"></div>
-    </div>
-  </div>
-</div>
+      
 <div id="right-sidebar" class="settings-panel">
   <i class="settings-close ti-close"></i>
   <ul class="nav nav-tabs border-top" id="setting-panel" role="tablist">
@@ -1350,28 +1335,28 @@
 
   <!-- plugins:js -->
   
-  <script src="{% static 'assets/vendors/js/vendor.bundle.base.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/vendors/js/vendor.bundle.base.js' %}"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
-  <script src="{% static 'assets/vendors/chart.js/chart.umd.js' %}"></script>
-  <script src="{% static 'assets/vendors/datatables.net/jquery.dataTables.js' %}"></script>
-  <!-- <script src="{% static 'assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script> -->
-  <script src="{% static 'assets/vendors/datatables.net-bs5/dataTables.bootstrap5.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/vendors/chart.js/chart.umd.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/vendors/datatables.net/jquery.dataTables.js' %}"></script>
+  <!-- <script nonce="{{ csp_nonce }}" src="{% static 'assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script> -->
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/vendors/datatables.net-bs5/dataTables.bootstrap5.js' %}"></script>
 
-  <script src="{% static 'assets/js/dataTables.select.min.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/dataTables.select.min.js' %}"></script>
 
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="{% static 'assets/js/off-canvas.js' %}"></script>
-  <script src="{% static 'assets/js/hoverable-collapse.js' %}"></script>
-  <script src="{% static 'assets/js/template.js' %}"></script>
-  <script src="{% static 'assets/js/settings.js' %}"></script>
-  <script src="{% static 'assets/js/todolist.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/off-canvas.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/hoverable-collapse.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/template.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/settings.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/todolist.js' %}"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
-  <script src="{% static 'assets/js/jquery.cookie.js' %}" type="text/javascript"></script>
-  <script src="{% static 'assets/js/dashboard.js' %}"></script>
-  <script src="{% static 'assets/js/Chart.roundedBarCharts.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/jquery.cookie.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/dashboard.js' %}"></script>
+  <script nonce="{{ csp_nonce }}" src="{% static 'assets/js/Chart.roundedBarCharts.js' %}"></script>
   <!-- End custom js for this page-->
 </body>
 
