--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -40,7 +40,14 @@
   <!-- endinject -->
   <link rel="shortcut icon" href="assets/images/favicon.png" />
 <style> 
-
+  thead th {
+    position: sticky;
+    top: 0;
+    background-color: #117057 !important;
+    color: #fff !important;
+    z-index: 10;
+    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+  }
       .barcode-img-preview {
         transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         cursor: zoom-in;
@@ -754,10 +761,10 @@
                   <a class="nav-link" href="{% url 'IS_PickTable' %}">Pick Table</a>
                 </li>
                 <li class="nav-item"> 
-                  <a class="nav-link" href="{% url 'BulkUpload' %}">Accept</a>
+                  <a class="nav-link" href="#">Accept</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'dp_pick_table' %}">Reject</a>
+                  <a class="nav-link" href="{% url 'IS_RejectTable' %}">Reject</a>
                 </li>
               </ul>
             </div>
