--- a/static/templates/pages/ui-features/carousel.html
+++ b/static/templates/pages/ui-features/carousel.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,20 +9,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Skydash Admin</title>
+  
   <!-- plugins:css -->
-  <link rel="stylesheet" href="../../../assets/vendors/feather/feather.css">
-  <link rel="stylesheet" href="../../../assets/vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="../../../assets/vendors/css/vendor.bundle.base.css">
-  <link rel="stylesheet" href="../../../assets/vendors/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static 'assets/vendors/feather/feather.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendors/ti-icons/css/themify-icons.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendors/css/vendor.bundle.base.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendors/font-awesome/css/font-awesome.min.css' %}">
   <!-- endinject -->
   <!-- Plugin css for this page -->
-  <link rel="stylesheet" href="../../../assets/vendors/owl-carousel-2/owl.carousel.min.css">
-  <link rel="stylesheet" href="../../../assets/vendors/owl-carousel-2/owl.theme.default.min.css">
+  <link rel="stylesheet" href="{% static 'assets/vendors/owl-carousel-2/owl.carousel.min.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/vendors/owl-carousel-2/owl.theme.default.min.css' %}">
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="../../../assets/css/vertical-layout-light/style.css">
+  <link rel="stylesheet" href="{% static 'assets/css/vertical-layout-light/style.css' %}">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../../../assets/images/favicon.png" />
+  <link rel="shortcut icon" href="assets/images/favicon.png" />
 </head>
 
 <body class="sidebar-icon-only">
@@ -104,7 +106,7 @@
       </li>
       <li class="nav-item nav-profile dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-          <img src="../../../assets/images/faces/face28.jpg" alt="profile" />
+          <img src="{% static 'assets/images/faces/face28.jpg' %}" alt="profile" />
         </a>
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
           <a class="dropdown-item">
@@ -253,7 +255,7 @@
       </div>
       <ul class="chat-list">
         <li class="list active">
-          <div class="profile"><img src="../../../assets/images/faces/face1.jpg" alt="image"><span
+          <div class="profile"><img src="{% static 'assets/images/faces/face1.jpg' %}" alt="image"><span
               class="online"></span></div>
           <div class="info">
             <p>Thomas Douglas</p>
@@ -262,7 +264,7 @@
           <small class="text-muted my-auto">19 min</small>
         </li>
         <li class="list">
-          <div class="profile"><img src="../../../assets/images/faces/face2.jpg" alt="image"><span
+          <div class="profile"><img src="{% static 'assets/images/faces/face2.jpg' %}" alt="image"><span
               class="offline"></span></div>
           <div class="info">
             <div class="wrapper d-flex">
@@ -274,7 +276,7 @@
           <small class="text-muted my-auto">23 min</small>
         </li>
         <li class="list">
-          <div class="profile"><img src="../../../assets/images/faces/face3.jpg" alt="image"><span
+          <div class="profile"><img src="{% static 'assets/images/faces/face3.jpg' %}" alt="image"><span
               class="online"></span></div>
           <div class="info">
             <p>Daniel Russell</p>
@@ -283,7 +285,7 @@
           <small class="text-muted my-auto">14 min</small>
         </li>
         <li class="list">
-          <div class="profile"><img src="../../../assets/images/faces/face4.jpg" alt="image"><span
+          <div class="profile"><img src="{% static 'assets/images/faces/face4.jpg' %}" alt="image"><span
               class="offline"></span></div>
           <div class="info">
             <p>James Richardson</p>
@@ -292,7 +294,7 @@
           <small class="text-muted my-auto">2 min</small>
         </li>
         <li class="list">
-          <div class="profile"><img src="../../../assets/images/faces/face5.jpg" alt="image"><span
+          <div class="profile"><img src="{% static 'assets/images/faces/face5.jpg' %}" alt="image"><span
               class="online"></span></div>
           <div class="info">
             <p>Madeline Kennedy</p>
@@ -301,7 +303,7 @@
           <small class="text-muted my-auto">5 min</small>
         </li>
         <li class="list">
-          <div class="profile"><img src="../../../assets/images/faces/face6.jpg" alt="image"><span
+          <div class="profile"><img src="{% static 'assets/images/faces/face6.jpg' %}" alt="image"><span
               class="online"></span></div>
           <div class="info">
             <p>Sarah Graves</p>
@@ -584,13 +586,13 @@
                   <h4 class="card-title">Basic carousel</h4>
                   <div class="owl-carousel owl-theme full-width">
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_12.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_12.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_2.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_2.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_1.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_1.jpg' %}" alt="image" />
                     </div>
                   </div>
                 </div>
@@ -603,7 +605,7 @@
                   <div class="owl-carousel owl-theme full-width">
                     <div class="item">
                       <div class="card text-white">
-                        <img class="card-img" src="../../../assets/images/carousel/banner_4.jpg" alt="Card image">
+                        <img class="card-img" src="{% static 'assets/images/carousel/banner_4.jpg' %}" alt="Card image">
                         <div class="card-img-overlay d-flex">
                           <div class="mt-auto text-center w-100">
                             <h3>Third Slide Label</h3>
@@ -615,7 +617,7 @@
                     </div>
                     <div class="item">
                       <div class="card text-white">
-                        <img class="card-img" src="../../../assets/images/carousel/banner_5.jpg" alt="Card image">
+                        <img class="card-img" src="{% static 'assets/images/carousel/banner_5.jpg' %}" alt="Card image">
                         <div class="card-img-overlay d-flex">
                           <div class="mt-auto text-center w-100">
                             <h3>Third Slide Label</h3>
@@ -627,7 +629,7 @@
                     </div>
                     <div class="item">
                       <div class="card text-white">
-                        <img class="card-img" src="../../../assets/images/carousel/banner_6.jpg" alt="Card image">
+                        <img class="card-img" src="{% static 'assets/images/carousel/banner_6.jpg' %}" alt="Card image">
                         <div class="card-img-overlay d-flex">
                           <div class="mt-auto text-center w-100">
                             <h3>Third Slide Label</h3>
@@ -649,25 +651,25 @@
                   <h4 class="card-title">Loop</h4>
                   <div class="owl-carousel owl-theme loop">
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_7.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_7.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_8.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_8.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_9.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_9.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_10.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_10.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_11.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_11.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_12.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_12.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_2.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_2.jpg' %}" alt="image" />
                     </div>
                   </div>
                 </div>
@@ -681,19 +683,19 @@
                   <h4 class="card-title">non-Loop</h4>
                   <div class="owl-carousel owl-theme nonloop">
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_3.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_3.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_5.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_5.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_6.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_6.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_8.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_8.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_11.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_11.jpg' %}" alt="image" />
                     </div>
                   </div>
                 </div>
@@ -706,22 +708,22 @@
                 <div class="card-body">
                   <h4 class="card-title">Lazy load</h4>
                   <div class="owl-carousel owl-theme lazy-load">
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_8.jpg"
-                      data-src="../../../assets/images/carousel/banner_8.jpg"
-                      data-src-retina="../../../assets/images/carousel/banner_8.jpg" alt="image" />
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_10.jpg"
-                      data-src="../../../assets/images/carousel/banner_10.jpg"
-                      data-src-retina="../../../assets/images/carousel/banner_10.jpg" alt="image" />
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_9.jpg"
-                      data-src="../../../assets/images/carousel/banner_9.jpg" alt="image" />
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_11.jpg"
-                      data-src="../../../assets/images/carousel/banner_11.jpg" alt="image" />
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_6.jpg"
-                      data-src="../../../assets/images/carousel/banner_6.jpg" alt="image" />
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_3.jpg"
-                      data-src="../../../assets/images/carousel/banner_3.jpg" alt="image" />
-                    <img class="owl-lazy" src="../../../assets/images/carousel/banner_4.jpg"
-                      data-src="../../../assets/images/carousel/banner_4.jpg" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_8.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_8.jpg' %}"
+                      data-src-retina="assets/images/carousel/banner_8.jpg" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_10.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_10.jpg' %}"
+                      data-src-retina="assets/images/carousel/banner_10.jpg" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_9.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_9.jpg' %}" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_11.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_11.jpg' %}" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_6.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_6.jpg' %}" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_3.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_3.jpg' %}" alt="image" />
+                    <img class="owl-lazy" src="assets/images/carousel/banner_4.jpg"
+                      data-src="{% static 'assets/images/carousel/banner_4.jpg' %}" alt="image" />
                   </div>
                 </div>
               </div>
@@ -734,25 +736,25 @@
                   <h4 class="card-title">Right to left</h4>
                   <div class="owl-carousel owl-theme rtl-carousel">
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_6.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_6.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_9.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_9.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_12.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_12.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_3.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_3.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_7.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_7.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_10.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_10.jpg' %}" alt="image" />
                     </div>
                     <div class="item">
-                      <img src="../../../assets/images/carousel/banner_2.jpg" alt="image" />
+                      <img src="{% static 'assets/images/carousel/banner_2.jpg' %}" alt="image" />
                     </div>
                   </div>
                 </div>
@@ -795,20 +797,20 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../../assets/vendors/js/vendor.bundle.base.js"></script>
+  <script src="{% static 'assets/vendors/js/vendor.bundle.base.js' %}"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
-  <script src="../../../assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
+  <script src="{% static 'assets/vendors/owl-carousel-2/owl.carousel.min.js' %}"></script>
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="../../../assets/js/off-canvas.js"></script>
-  <script src="../../../assets/js/hoverable-collapse.js"></script>
-  <script src="../../../assets/js/template.js"></script>
-  <script src="../../../assets/js/settings.js"></script>
-  <script src="../../../assets/js/todolist.js"></script>
+  <script src="{% static 'assets/js/off-canvas.js' %}"></script>
+  <script src="{% static 'assets/js/hoverable-collapse.js' %}"></script>
+  <script src="{% static 'assets/js/template.js' %}"></script>
+  <script src="{% static 'assets/js/settings.js' %}"></script>
+  <script src="{% static 'assets/js/todolist.js' %}"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
-  <script src="../../../assets/js/owl-carousel.js"></script>
+  <script src="{% static 'assets/js/owl-carousel.js' %}"></script>
   <!-- End custom js for this page-->
 </body>
 
